@@ -1,3 +1,12 @@
+2002-07-22  Wakaba <w@suika.fam.cx>
+
+	* XMoe.pm (_decode_parameters): Don't push 'of' pseudo
+	parameter to @$param before SUPER::_decode_parameters.
+	(To prevent its value from being reinterpreted incorrectly
+	and so being broken.) (Giving also 'section_no' to the hash
+	and passing to SUPER::_decode_parameters was another way
+	to do it.)
+
 2002-07-21  Wakaba <w@suika.fam.cx>
 
 	* Structured.pm (_parse_value): Inherit header_default_charset,
